cleanup: fix weird list creation what was I thinking